# fishtank

./: Cargo.toml
assets/: base.glb  coral.glb  fish.glb  frame.glb  gravel.glb  rocks.glb  skeleton.glb  snail.glb  starfish.glb  tank.glb
src/: bubbles.rs  camera.rs  draw.rs  general.rs  input.rs  main.rs  pellets.rs  sky.rs  tank.rs
src/creatures/: behavior.rs  fish_behavior.rs  fish_systems.rs  lifecycle.rs  snail_behavior.rs  snail_systems.rs  starfish_systems.rs
